Sound, submission, syntax, and styling update
-Nav items, on the HTP, LTA, and Play screens, spacing increased
-Credits updated to include p5 and bfxr
-Sound effects were added to the game
-Mute button added
-WIP page removed
-Correction to the play page (said NnC/HTP > NnC/Play in the nav bar)
-Documentation updated

--- a/css/HTP.css
+++ b/css/HTP.css
@@ -30,6 +30,9 @@ ul{
     font-size: larger;
     font-weight: 600;
 }
+.nav-item{
+    padding:0px 20px;
+}
 
 #Rules{
     background-color: #41444b;
