--- a/css/LTA.css
+++ b/css/LTA.css
@@ -36,6 +36,9 @@ a:hover{
     font-size: larger;
     font-weight: 600;
 }
+.nav-item{
+    padding:0px 20px;
+}
 
 #LTA{
     background-color: #41444b;
